--- a/index.html
+++ b/index.html
@@ -8,19 +8,24 @@
     <link rel="stylesheet" href="./css/main.css">
     <title>Document</title>
 </head>
-<body>
-    <header>
-
+<body class="bg-warning">
+    <header class="container text-center my-3">
+        <img class="" src="./images/pokemon_logo.png" alt="pokemon_logo" width="300">
     </header>
 
     <main>
+        <section class="container px-5">
+            <div id="pokemonlist" class="row  mx-auto p-0 text-center">
 
+            </div>
+        </section>
     </main>
 
     <footer>
 
     </footer>
 
+    <script src="./js/pokemon.js"></script>
     <script src="./js/bootstrap.js"></script>
     <script src="./js/main.js"></script>
 </body>
